# wal-e

./: .gitignore  ACCESS_GUIDE.md  CLAUDE.md  FEINFRA_TICKET_INPUTS.md  LICENSE.md  README.md  WAL-E_User_Guide.docx  WAL-E_User_Guide_SA.md  dbsql_consumption_analysis.sql  install.sh  pyproject.toml  run_dbsql_consumption_analysis.py
.claude/skills/: wal-e-skill.md
.cursor/rules/: wal-e-assessment.md
continuous/: README.md  databricks.yml
continuous/src/: dashboard_queries.sql  wal_e_scan.py
demo-assessment/: WAL_Assessment_Remediation_Guide.docx
demo-assessment/.wal-e-cache/: collected_data.json  scored_assessment.json
mcp/: __init__.py  server.py  tools.py
oauth-test/: WAL_Assessment_Remediation_Guide.docx
oauth-test/.wal-e-cache/: collected_data.json  scored_assessment.json
pr3-test-assessment/: WAL_Assessment_Remediation_Guide.docx
pr3-test-assessment/.wal-e-cache/: collected_data.json  scored_assessment.json
src/wal_e/: __init__.py  __main__.py  cli.py
src/wal_e/collectors/: __init__.py  auth.py  base.py  compute.py  governance.py  operations.py  security.py  system_tables.py  workspace.py
src/wal_e/core/: __init__.py  config.py  engine.py
src/wal_e/framework/: pillars.py  scoring.py
src/wal_e/reporters/: __init__.py  audit_log.py  base.py  csv_report.py  docx_remediation.py  html_deck.py  markdown.py  pptx_deck.py
src/wal_e/skills/: wal_assessment.md
tests/: __init__.py  test_config.py  test_reporters.py
