[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wal-e"
version = "0.1.0"
description = "Well-Architected Lakehouse Evaluator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=1.0.0",
    "python-docx>=1.0.0",
]

[project.scripts]
wal-e = "wal_e.cli:main"

[project.optional-dependencies]
mcp = ["fastmcp>=2.0.0"]

[project.urls]
Repository = "https://github.com/priyal-chindarkar_data/wal-e"

[tool.setuptools.packages.find]
where = ["src"]
